--- a/ofdrw-sign/pom.xml
+++ b/ofdrw-sign/pom.xml
@@ -35,7 +35,8 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.77</version>
         </dependency>
     </dependencies>
 </project>
