--- a/ofdrw-crypto/pom.xml
+++ b/ofdrw-crypto/pom.xml
@@ -26,7 +26,8 @@
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
-            <artifactId>bcprov-jdk15on</artifactId>
+            <artifactId>bcprov-jdk18on</artifactId>
+            <version>1.77</version>
         </dependency>
         <dependency>
             <groupId>org.ofdrw</groupId>
